--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@
 *.xd
 
 # Avoid your project being littered with annoying .DS_Store files!
-.DS_Store
-.prettierignore
-README.md
+
+qr-code-component-Figma
+qr-code-component-sketch
+images
